<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false"
    android:id="@+id/scrollView">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/linearLayout">

    <Button
        android:id="@+id/addFriend"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:width="300dp"
        android:height="50dp"
        android:gravity="center_horizontal"
        android:text="addFriend"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:width="300dp"
        android:height="50dp"
        android:gravity="center_horizontal"
        android:text="Click friend label below to look at friend' progress"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        />

</LinearLayout>
</ScrollView>
